--- a/Biodata Diri/Biodata.html
+++ b/Biodata Diri/Biodata.html
@@ -55,7 +55,7 @@
                 <td>Ngegame</td>
             </tr>
         </table>
-        <iframe src="https://www.youtube.com/channel/UC3o92_msTQsaCxj3zNP4-2g" width="400" height="215"
-        frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+        <iframe width="460" height="315" src="https://www.youtube.com/embed/Po9zm52H7IE" frameborder="0" 
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
